--- a/index.css
+++ b/index.css
@@ -1,6 +1,24 @@
+body{
+    z-index: 2;
+}
+
 .icon{
     /* padding: 3em; */
     color: black;
     user-select: none;
     font-size: 500%;
+}
+
+#logo{
+    font-size: 200%;
+}
+
+nav{
+    opacity: 0.9;
+}
+
+.card{
+    margin: 5%;
+    border-radius: 1em;
+    opacity: 0.90;
 }
