--- a/index.css
+++ b/index.css
@@ -36,3 +36,10 @@ nav{
 .jumbotron{
     opacity: 0.90;
 }
+
+.socialIcons{
+    min-width: 40px;
+    min-height: 40px;
+    width: 5%;
+    height: 5%;
+}
