changed size unit

--- a/index.css
+++ b/index.css
@@ -38,8 +38,8 @@ nav{
 }
 
 .socialIcons{
-    min-width: 40px;
-    min-height: 40px;
+    min-width: 40pt;
+    min-height: 40pt;
     width: 5%;
     height: 5%;
 }
