--- a/bg.css
+++ b/bg.css
@@ -1,7 +1,7 @@
 .large-header {
     position: fixed;
     width: 100%;
-    background: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg");
+    background: url("./Public/Media/bg.jpg");
     overflow: hidden;
     background-size: cover;
     background-position: left;
